@@ -3,6 +3,9 @@ v1.2.10 (2018.07.xx)
   - Reduce default Live TV / Recorded TV stream ring buffer size to 1MiB
   - Increase default "DVR stream read operation minimum size" advanced option to 4KiB
   - Add 32KiB option for "DVR stream read operation minimum size" advanced option
+  - Rename "Pause discovery while streaming Live TV channels" setting to "Pause discovery tasks while streaming"
+  - Apply "Pause discovery tasks while streaming" during playback of Recorded TV streams
+  - Fix bug causing discovery tasks to remain paused indefinitely if an error occurs starting a Live TV stream
 
 v1.2.9 (2018.07.01)
   - Correct format of SessionID passed to HDHomeRun RECORD engine for Live TV streams
